kubernetes/performance-php-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    tier: php
  name: performance-php
  namespace: performance
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      tier: php
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        tier: php
    spec:
      containers:
      - image: tbsacr.azurecr.io/performance_php:1.0.0
        imagePullPolicy: Always
        livenessProbe:
          exec:
            command:
            - php-fpm-healthcheck
          failureThreshold: 3
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        name: performance-php
        ports:
        - containerPort: 9000
          name: tcp-php-fpm
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - php-fpm-healthcheck
          failureThreshold: 3
          initialDelaySeconds: 1
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
