kubernetes/performance-php-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    tier: php
  name: performance-php
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    tier: php
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
