kubernetes/performance-alpha-ingress-staging.yml
apiVersion: extensions/v1
kind: Ingress
metadata:
  name: performance-alpha-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3000"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "3000"
    nginx.ingress.kubernetes.io/client-header-timeout: "3000"
spec:
  tls:
  - hosts:
    - performance.alpha.canada.ca
    secretName: performance-tls-secret-staging
  rules:
  - host: performance.alpha.canada.ca
    http:
      paths:
      - backend:
          service:
            name: performance-nginx
            port:
              number: 80
        path: /
